# fractal-cli

./: .coveragerc  Dockerfile.test  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
fractal/cli/: __init__.py  __main__.py  fmt.py  utils.py
fractal/cli/controllers/: auth.py  authenticated.py  registration.py
synapse/config/: config_to_add.yaml
test-config/: entrypoint.sh  prepare-test.py
tests/: cli_controller.py  test_auth_controller.py  test_authenticated_controller.py  test_cli.py  test_fmt.py  test_login.py  test_registration_controller.py  test_utils.py
