[tool.poetry]
name = "fractal-cli"
version = "0.1.0"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"

packages = [{include="fractal"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
pytest = { version = "^7.4.3", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "pytest-mock", "ipython"]
