[tool.poetry]
name = "fractal-cli"
version = "0.1.0"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"

packages = [{include="fractal"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
toml = "^0.10.2"
appdirs = "^1.4.4"
clicz = ">=0.0.2"
pytest = { version = "^7.4.3", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fractal = "fractal.cli.__main__:main"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "pytest-mock", "ipython"]

[tool.poetry.plugins."fractal.plugins"]
"auth" = "fractal.cli.controllers.auth"
"register" = "fractal.cli.controllers.registration"
