[tool.poetry]
name = "fractal-cli"
version = "0.1.2"
description = ""
authors = ["Mo Balaa <balaa@fractalnetworks.co>"]
readme = "README.md"

packages = [{include="fractal"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
toml = "^0.10.2"
appdirs = "^1.4.4"
clicz = ">=0.0.2"
asgiref = ">=3.7.2"
fractal-matrix-client = ">=0.0.1"
pytest = { version = "^7.4.3", optional = true }
pytest-asyncio = { version = "^0.21.1", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
pytest-mock = { version = "^3.11.1", optional = true }
docker = { version = "^6.1.3", optional = true }
ipython = { version = "^8.17.2", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fractal = "fractal.cli.__main__:main"

[tool.poetry.extras]
dev = ["docker", "pytest", "pytest-cov", "pytest-mock", "pytest-asyncio", "ipython"]

[tool.poetry.plugins."fractal.plugins"]
"auth" = "fractal.cli.controllers.auth"
"register" = "fractal.cli.controllers.registration"
